Fix spacing in why-page

--- a/css/index.css
+++ b/css/index.css
@@ -321,8 +321,9 @@ footer a:hover {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    margin-top: 1em;
 }
 
 .line {
@@ -338,7 +339,7 @@ footer a:hover {
 }
 
 .line.expanded {
-    height: 100%;
+    height: 75%;
     transition: height 2s;
 }
 
